--- a/index.html
+++ b/index.html
@@ -1809,7 +1809,7 @@
 
         </div>
     </div>
-    <script src="script/relogio.js"></script>
+    <script src="script/calculadora.js"></script>
 </body>
 
 </html>
