--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Calculadora Hcode</title>
+    <title>Calculadora</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
         button,
@@ -1809,7 +1809,8 @@
 
         </div>
     </div>
-    <script src="script/calculadora.js"></script>
+    <script src="script/controller/CalcController.js"></script>
+    <script src="script/calculator.js">
 </body>
 
 </html>
