--- a/index.html
+++ b/index.html
@@ -1810,7 +1810,7 @@
         </div>
     </div>
     <script src="script/controller/CalcController.js"></script>
-    <script src="script/calculator.js">
+    <script src="script/calculator.js"></script>
 </body>
 
 </html>
